comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 <body>
     <main>
         <header>
-            <h1>Título Do Site</h1>
+            <h1>Cursos Grátiis</h1>
         </header>
         <Article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artig 001</p>
+            <h2>Curso de HML e CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Quis magni architecto cupiditate quos voluptatibus sint harum illum. 
+                Asperiores blanditiis id autem quam delectus sunt repellat omnis, ex ad, rerum veritatis!</p>
         </Article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Magnam ea placeat, excepturi vitae dolorem unde quaerat fugit asperiores, quos eum inventore 
+                mollitia dolores blanditiis esse repudiandae culpa itaque. Eos, repellat.</p>
         </article>
     </main>
     
